--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,18 +1,18 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
-  font-size: 20px;
+  font-size: 30px;
   -webkit-font-smoothing: antialiased;
   line-height: 1.3;
 }
 
 a {
-  color: #5334F5;
+  color: #ffd38a;
   text-decoration: none;
   font-weight: 600;
 }
 .Hero {
-  background: url('../images/DSC05763.jpg');
+  background: url('../images/duian.jpg');
   height: 920px;
   background-size: cover;
   background-position: center;
@@ -20,21 +20,30 @@ a {
 
 .HeroGroup {
   margin: 0 auto;
-  max-width: 500px;
-  padding: 150px 50px;
+  max-width: 900px;
+  padding: 200px 50px;
   text-align: center;
 }
 
 .Hero h1 {
-  margin: 0;
+  margin: 40 auto;
   color: white;
   font-size: 60px;
+  font-style: italic;
   line-height: 1.2;
+  opacity: 0;
+  animation: HeroAnimation;
+  animation-duration: 3s;
+  animation-delay: 0.5s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 .Hero p {
   color: rgba(255, 255, 255, 0.8);
   font-size: 30px;
   line-height: 1.5;
+  animation: HeroAnimation 3s 0.2s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
+  opacity: 0;
 }
 .Hero a {
   font-size: 17px;
@@ -43,6 +52,29 @@ a {
   text-transform: uppercase;
   background: rgba(0,0,0,0.7);
   padding: 9px 20px;
-  border:1px solid rgba(255, 255, 255, 0.25);
+  border:1px solid rgba(255, 255, 255, 0.75);
   border-radius: 20px;
+}
+
+@media (max-width: 640px) {
+  .HeroGroup {
+    padding: 100px 20px;
+  }
+  .Hero h1 {
+    font-size: 40px;
+  }
+  .Hero p {
+    font-size: 24px;
+  }
+}
+
+@keyframes HeroAnimation {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
