--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,13 +16,16 @@
 }
 .Header a {
     color: #ffd38a;
-    font-weight: 700;
+    font-weight: bolder;
+    font-size: 20px;
+    font-family: SF Pro Display;
 }
 .Header button {
+    font-family: SF Pro Display;
     color: black;
     padding: 8px 20px;
     font-size: 20px;
-    font-weight: 1000;
+    font-weight: 900;
     border-radius: 10px;
     border: none;
     background: #56CCF2;
@@ -31,7 +34,7 @@
     transition: 0.7s cubic-bezier(0.2, 0.8, 0.165, 1);
 }
 .Header button:hover {
-    background: #ffd38a;
+    background: white;
     color: black;
     box-shadow: 0 10px 20px rgba(0,0,0,0.25);
     transform:  translateY(-3px);
