--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,13 +9,14 @@ body {
 a {
   color: #ffd38a;
   text-decoration: none;
-  font-weight: 600;
 }
+
 .Hero {
-  background: url('../images/duian.jpg');
+  background: url('../images/DSC05777.jpg');
   height: 920px;
   background-size: cover;
   background-position: center;
+  position: relative;
 }
 
 .HeroGroup {
@@ -77,4 +78,36 @@ a {
     opacity: 1;
     transform: translateY(0px);
   }
+}
+
+.Hero svg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.About_me {
+  font-style: italic;
+  font-family:adobe-garamond-pro;
+  font-size: 32px;
+  color: rgba(26, 26, 26, 0.9);
+  margin: auto auto;
+  height: 300px;
+  max-width: 900px;
+  text-align: center;
+  
+}
+.About_me p {
+  font-style: normal;
+  color: rgba(26, 26, 26, 0.7);
+  text-align: center;
+  font-size: 16px;
+}
+.CardWrapper {
+  max-width: 1000px;
+  margin: auto auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 80px;
+  justify-items: center;
 }
