--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -101,7 +101,7 @@ a {
   font-style: normal;
   color: rgba(26, 26, 26, 0.7);
   text-align: center;
-  font-size: 16px;
+  font-size: 18px;
 }
 .CardWrapper {
   max-width: 1000px;
@@ -110,4 +110,15 @@ a {
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 80px;
   justify-items: center;
+}
+@media (max-width: 1060px) {
+  .CardWrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 720px) {
+  .CardWrapper {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
