--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,13 +1,14 @@
 .Card {
     width: 300px;
-    height: 225px;
+    height: 230px;
     position: relative;
     overflow: hidden;
     border-radius: 20px;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2);
     display: grid;
     grid-template-rows: 1fr 1fr;
     transition: 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
+    margin-bottom: 100px;
 }
 .Card:hover {
     transform: scale(1.05, 1.05);
