--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,13 @@
     width: 100%;
     padding: 50px 0;
     z-index: 100;
+    transition: 0.8s cubic-bezier(0.2, 0.82, 0.165, 1);
 
+}
+.HeaderScrolled {
+    background: rgba(0, 0, 0, 0.7);
+    padding: 15px 0;
+    backdrop-filter: blur(10px);
 }
 .HeaderGroup {
     max-width: 1000px;
