--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -87,7 +87,7 @@ a {
 
 .About_me {
   font-style: italic;
-  font-family:adobe-garamond-pro;
+  font-family: adobe-garamond-pro, serif;
   font-size: 32px;
   color: rgba(26, 26, 26, 0.9);
   margin: auto auto;
@@ -97,10 +97,13 @@ a {
   
 }
 .About_me p {
+  font-family: adobe-garamond-pro, serif;
   font-style: normal;
+  font-weight: 400;
+
   color: rgba(26, 26, 26, 0.7);
   text-align: center;
-  font-size: 18px;
+  font-size: 20px;
 }
 .CardWrapper {
   max-width: 900px;
