--- a/src/components/404.css
+++ b/src/components/404.css
@@ -1,3 +1,17 @@
+.WaterBallWrapper {
+    width: 400px;
+    height: 400px;
+    border: 3px solid darkturquoise;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    top: 30%;
+    transform: translate(-50%,-50%);
+    padding: 10px;
+
+}
+
+
 .WaterBallWave {
     width: 400px;
     height: 400px;
@@ -14,7 +28,7 @@
     position: absolute;
     left: 23%;
     top: 20%;
-    color: darkturquoise;
+    color: rgba(0,206,209,0.8);
     z-index: 99;
 }
 .WaterBallWave:after {
