--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -26,24 +26,11 @@
     font-size: 20px;
     font-family: SF Pro Display;
 }
-.Header button {
-    font-family: SF Pro Display;
-    color: black;
-    padding: 8px 20px;
-    font-size: 20px;
-    font-weight: 900;
-    border-radius: 10px;
-    border: none;
-    background: #56CCF2;
-    outline: none;
-    cursor: pointer;
-    transition: 0.7s cubic-bezier(0.2, 0.8, 0.165, 1);
-}
-.Header button:hover {
-    background: white;
-    color: black;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.25);
-    transform:  translateY(-3px);
+.Header img {
+    width: 26px;
+    margin-top: 5px;
+    align-content: center;
+    justify-content: center;
 }
 
 @media (max-width: 640px) {
