about page update

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -5,14 +5,15 @@
 .wholePage {
     margin: 0;
     padding: 0;
-    height: 900px;
+    height: 100%;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     /* background-color: #000; */
-    padding-top: 10%;
+    padding-top: 5%;
+    padding-bottom: 6% ;
     background: -webkit-linear-gradient(left bottom,rgb(121,150,137),rgb(55,68,110));
 }
 .card-container {
-    width: 600px;
+    width: 30%;
     margin: 0 auto;
     animation: cardContainerLoad 2s;
   }
@@ -30,10 +31,11 @@
   
 .card-container .image-wrapper {
     font-size: 0px;
+
 }
 
 .card-container .image-wrapper img {
-    width: 600px;
+    width: 100%;
     border-radius: 8px 8px 0 0 ;
 }
 
@@ -70,13 +72,13 @@
     margin: 0;
     text-align: center;
 }
-
 .card-container .title-wrapper  .icon-btns ul li{
     display: inline-block;
     border: 1px solid #000;
-    padding: 15px;
+    padding: 9px 16px;
     border-radius: 35px;
     cursor: pointer;
+    
     border-color: rgb(79, 92, 99);
     transition: .2s;
 }
